Implementando o repository, service e controller do LeveMv

--- a/LeveMvApi/appsettings.json
+++ b/LeveMvApi/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
 
+  "AllowedHost": "*",
   "ConnectionStrings": {
     "DevConnection": "Server=DESKTOP-VC8DKBE\\SQLEXPRESS;Database=LeveMvDB;Trusted_Connection=True;MultipleActiveResultSets=True;Encrypt=False;"
   },
