--- a/LeveMvApi/LeveMvApi.csproj
+++ b/LeveMvApi/LeveMvApi.csproj
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Controllers\LeveMvController.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.5">
@@ -22,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\LeveMv.Application\LeveMv.Application.csproj" />
     <ProjectReference Include="..\LeveMv.Infra\LeveMv.Data.csproj" />
   </ItemGroup>
 
